# smallstr

./: Cargo.toml
.cargo/: config.toml
src/: lib.rs  string.rs
tests/: mod.rs
