[package]
name = "smallstr"
version = "0.3.0"
authors = ["Murarth <murarth@gmail.com>"]
edition = "2018"

description = "String-like container based on smallvec"

documentation = "https://docs.rs/smallstr/"
homepage = "https://github.com/murarth/smallstr"
repository = "https://github.com/murarth/smallstr"

categories = ["data-structures"]
keywords = ["small", "str", "string"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[features]
ffi = []
std = ["serde/std", "smallvec/std"]


[dependencies]
serde = { version = "1.0.216", default-features = false, features = ["alloc"], optional = true }
smallvec = { version = "2.0.0-alpha.9", features = ["may_dangle", "extract_if", "specialization"] }

[dev-dependencies]
bincode = { version = "2.0.0-rc.3", features = ["serde", "default"] }
